[UI] Added Label - Fixed overlap with the TextField

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,3 @@
 .test {
-  color: var(--main-text-color);
+  color: var(--main-menu-text-color);
 }
